Solved overflow of skills issue in profile_self

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,6 +16,7 @@
  {
    outline: 0 !important;
  }
+
   #profile-other
   {
     background: rgb(240,240,240);
@@ -24,6 +25,10 @@
   {
     background: #3498DB;
     color: white;
+  }
+  #profile-self
+  {
+    background: #3498DB;
   }
   #profile-self .navbar
   {
@@ -1006,6 +1011,11 @@ color: rgb(250,250,250) !important;
 
 }
 
+#profile-self-top-section
+  {
+    min-height: 100vh;
+  }
+
 .profile-self-info
 {
   background:white;
@@ -1026,6 +1036,7 @@ color: rgb(250,250,250) !important;
   color: black;
   font-weight: bold;
   position: relative;
+  box-shadow:0 0 20px rgba(0,0,0,0.1);
 }
 .profile-self-findproject-holder a
 {
@@ -1033,7 +1044,7 @@ color: rgb(250,250,250) !important;
 }
 .profile-self-aboutme-header
 {
-  height:60%;
+  height:30vh;
   border-bottom: 1px solid rgb(204,204,204);
   text-align: center;
 }
@@ -1057,11 +1068,27 @@ color: rgb(250,250,250) !important;
 {
   margin:0;
 }
-.profile-self-aboutme-footer
-{
+.profile-self-aboutme-footer{
+  padding-top:2%;
   text-align: center;
   margin-top:2%;
-  overflow: hidden;
+  overflow-y: scroll;
+  min-height: 17vh;
+  max-height: 17vh;
+  margin-left: 2%;
+  margin-right: 2%;
+}
+.profile-self-aboutme-footer::-webkit-scrollbar {
+   width: 0.4em;
+}
+
+.profile-self-aboutme-footer::-webkit-scrollbar-track {
+   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+
+.profile-self-aboutme-footer::-webkit-scrollbar-thumb {
+ background-color: darkgrey;
+ outline: 1px solid slategrey;
 }
 .profile-self-aboutme-footer .CustomBadge
 {
